Use new look and feel. Fix #44